[gd_scene load_steps=3 format=3 uid="uid://bher15swug66t"]

[ext_resource type="Script" path="res://scenes/Charactors/Enemy/Enemy.gd" id="1_aaq5x"]
[ext_resource type="PackedScene" uid="uid://duod78noy4hw6" path="res://scenes/Charactors/Charactor.tscn" id="1_odtop"]

[node name="Enemy" instance=ExtResource("1_odtop")]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_aaq5x")
offset = Vector3(0, 0, 0)

[node name="BehaviorTimer" type="Timer" parent="." index="1"]
process_callback = 0
one_shot = true

[node name="ShotTimer" type="Timer" parent="." index="2"]
process_callback = 0

[connection signal="on_damage" from="." to="." method="_on_enemy_damage"]
[connection signal="on_hp_lost" from="." to="." method="_on_on_hp_lost"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
